# wlsonar

./: LICENSE  README.md  README_dev.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
examples/: README.md  convert_recording.py  record_udp_to_file.py  trim_recording.py
src/wlsonar/: __init__.py  _client.py  _msg_helper.py  _udp_helper.py
src/wlsonar/range_image_protocol/: _protocol.py
src/wlsonar/range_image_protocol/_proto/: WaterLinkedSonarIntegrationProtocol_pb2.pyi
tests/: test_e2e_real_sonar.py  test_msg_helpers.py
tests/data/: ship_short.sonar
